feat: Upgrade to latest json-react-layouts
BREAKING CHANGE: json-react-layouts has breaking changes and this relies on the new APIs

--- a/.eslintrc
+++ b/.eslintrc
@@ -2,6 +2,7 @@
     "extends": ["wanews"],
     "rules": {
         "@typescript-eslint/no-explicit-any": 0,
-        "@typescript-eslint/array-type": [1, { "default": "array-simple" }]
+        "@typescript-eslint/array-type": [1, { "default": "array-simple" }],
+        "@typescript-eslint/no-unused-vars": 0
     }
 }
